tests/netedit/basic/configs/netecfg/load/invalid/datas/errors.netedit
Error: Cannot read file 'C:\Users\alva_pa\.texttest\tmp\netedit.gui.13Dec091641.23688\netedit.gui\basic\configs\netecfg\invalid_inputs\datas\dummy.dat.xml'!
Error: Loading of C:\Users\alva_pa\.texttest\tmp\netedit.gui.13Dec091641.23688\netedit.gui\basic\configs\netecfg\invalid_inputs\datas\dummy.dat.xml failed.
